# metadata-warehouse

./: .gitignore  .pre-commit-config.yaml  DEPENDENCIES.md  LICENSE  README.md  docker-compose.langfuse.yml  docker-compose.override.yml.template  docker-compose.yml  env-template  env.template  env.template_e2e  keys.env.template  langfuse.env.template  pyproject.toml
.github/workflows/: ci_cd.yml
analytics/: create_report.py
analytics/reports/: report_2025-12-04_18-08-43.md
analytics/sql/: count_records_per_endpoint.sql  duplicates.sql  errors.sql  summary.sql
analytics/templates/: report.md.jinja
docker/transform/: Dockerfile
docs/: open_search_queries.md
e2e/: test_e2e.py
e2e/test_data/: dans.xml
etc/: redis.conf
opensearch_data/: create_index.py  import_data.py
populate/: requirements.txt
populate/postgres_data/: get_data.py
scripts/: pyproject.toml  requirements.txt
scripts/opensearch_data/: create_index.py  import_data.py  prepare_data.py  query_index.py
scripts/postgres_data/: create_db.py  get_data.py  import_data.py  init_all.sh  transform.py  verify.sh
scripts/postgres_data/create_sql/: access.sql  appDBconfig.sql  createDB.sql  datasetDBconfig.sql  fileDBconfig.sql  indexes.sql  permissions.sql  rbac_template.sql  seed.sql  tables.sql  toolDBconfig.sql  triggers.sql  types.sql  user.sql  userDBconfig.sql  verify.sql  views.sql
scripts/postgres_data/tables/: design.json  design_visualization.mermaid
src/: normalize_datacite_json.py  pyproject.toml  requirements.txt  schema.json  tasks.py  transform.py
src/config/: db_tables_design.json  db_tables_vis.mermaid  logger.py  logging_config.py  opensearch_config.py  opensearch_mapping.json  os_mapping.json  postgres_config.py  schema.json
src/tasks/: tasks.py
src/transform/: transform.py
src/utils/: embedding_utils.py  normalize_datacite_json.py  queue_utils.py
tests/: test_embedding_utils.py  test_normalize_datacite.py
tests/testdata/: doi_10.17026_SS_78HHDK.oai_datacite.xml  doi_10.17026_SS_78HHDK.oai_datacite.xml.json  doi_10.17026_SS_78HHDK.oai_datacite_normalized.xml.json  doi_10.17026_dans-2ab-dpmm.oai_datacite.xml.json
