[project]
name = "metadata-warehouse-transformer"
version = "0.0.1"
description = "Prepare and import DataCite OAI-PMH XML metadata into PostgreSQL and OpenSearch"
requires-python = ">=3.12"
dependencies = [
    "opensearch-py",
    "celery[redis]",
    "xmltodict",
    "jsonschema",
    "fastembed",
    "watchdog",
    "fastapi[standard]",
    "psycopg[binary]",
    # "flower", # only needed when not using mher/flower
]


[dependency-groups]
dev = [
    "pytest",
    "types-xmltodict",
    "celery-stubs",
    "mypy",
    "types-jsonschema",
    "types-requests",
    "lxml-stubs"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
