[project]
name = "metadata-warehouse-transformer"
version = "0.0.1"
description = "Prepare and import DataCite OAI-PMH XML metadata into PostgreSQL and OpenSearch"
requires-python = ">=3.12"
dependencies = [
    "opensearch-py",
    "celery[redis]",
    "xmltodict",
    "jsonschema",
    "fastembed",
    "watchdog",
    "fastapi[standard]",
    "psycopg[binary]",
    # "flower", # only needed when not using mher/flower
]


[dependency-groups]
dev = [
    "pytest",
    "types-xmltodict",
    "celery-stubs",
    "mypy",
    "types-jsonschema",
    "types-requests",
    "lxml-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.pytest.ini_options]
pythonpath = ["."]


[tool.mypy]
files = ["src/", "scripts/"]
strict = true


# https://docs.astral.sh/ruff/configuration
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
quote-style = "single"

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
# select = ["ALL"]
select = [
    "I",     # isort
    "N",     # pep8-naming
    "S",     # bandit
    "A",     # flake8-builtins
    "YTT",   # flake8-2020
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
    "ICN",   # flake8-import-conventions
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "Q",     # flake8-quotes
    "FBT",   # flake8-boolean-trap
    "T",     # flake8-debugger & flake8-print~
    "F",     # pyflakes
    "UP",    # pyupgrade
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "PLC",   # pylint convention
    "PLE",   # pylint error
    "PLW",   # pylint warning
    "RUF",   # ruff specific
]

[tool.ruff.lint.per-file-ignores]
# Prevent __init__.py from being flagged for unused imports and sorted
"__init__.py" = ["I", "F401"]
# Tests can use assertions and magic values
"tests/*" = ["PLR2004", "S101"]
