[project]
name = "metadata-warehouse-scripts"
version = "0.0.1"
description = "Prepare and import DataCite OAI-PMH XML metadata into PostgreSQL and OpenSearch"
requires-python = ">=3.12"
dependencies = [
    "opensearch-py",
    "pgsql",
    "python-dotenv",
    "xmltodict",
    "jsonschema",
    "fastembed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
